# dealii-adapter

./: CMakeLists.txt  README.md
.github/workflows/: building.yml  solver_ci.yml
adapter/: adapter.h  adapter_original.h  adapter_smp.h  precice_parameter.h  q_equidistant.h
include/adapter/: adapter.h
linear_elasticity/: CMakeLists.txt  linear_elasticity.cc
linear_elasticity/include/: parameter_handling.h
nonlinear_elasticity/: CMakeLists.txt  nonlinear_elasticity.cc
nonlinear_elasticity/include/: parameter_handling.h
source/heat_equation/: heat_equation.cc
tests/: clean_tests.sh  run_tests.sh
tests/write_tester/: CMakeLists.txt  linear_elasticity.prm  nonlinear_elasticity.prm  precice-config.xml  write_tester.cpp
tests/write_tester/reference/: linear-elasticity-writing.output  nonlinear-elasticity-writing.output  solver-physics-linear.output  solver-physics-nonlinear.output
